<resources>
    <string name="app_name">Clipboard Manager</string>
    <string name="app_description">Менеджер буфера обмена</string>

    <string name="empty_record">Пустая запись</string>
    <string name="record_already_exists">Запись уже существует в базе</string>
    <string name="deleted">Удалено: </string>
    <string name="delete">Удалить</string>

    <string name="select_records">Выберите записи...</string>
    <string name="copy_in_app">Добавлено в менеджер буфера</string>
    <string name="select_app_to_share">Выберите приложение...</string>
    <string name="action_delete">Удалить</string>
    <string name="action_settings">Settings</string>

    <!-- Боковое меню -->
    <string name="group_all_clips">Все записи</string>
    <string name="group_categories">Категории</string>
    <string name="group_settings">Настройки</string>
    <string name="group_info">О программе</string>

    <string name="setting_categories">Настроить категории</string>

    <string name="split">Объединить</string>
    <string name="cancel">Отмена</string>
    <string name="confirm">Подтверждение</string>

    <string name="question.cancel">Отменить?</string>
    <string name="question.save">Сохранить?</string>
    <string name="question.exit_without_save">Изменения не сохранены. Выйти без сохранения?</string>
    <string name="question.save_on_exit">Сохранить изменения перед выходом?</string>
    <string name="question.delete_selected">Удалить выделенные записи?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>

    <string name="title.split_items">Объединение записей</string>
    <string name="title.sort">Сортировка:</string>
    <string name="title.title_change">Изменение имени</string>
    <string name="title.delete_and_move">Удалить категорию и переместить ее записи в:</string>
    <string name="move_to">Переместить в:</string>
    <string name="new_category">Новая категория</string>

    <string name="save">Сохранить</string>
    <string name="saved">Сохранено</string>
    <string name="error.save">Ошибка сохранения</string>
    <string name="enter_clip_text">Введите текст записи!</string>
    <string name="title_activity_edit_categories">EditCategoriesActivity</string>
    <string name="action_split">Объединить</string>
    <string name="action_share">Поделиться</string>
    <string name="action_change_category">Переместить в…</string>
    <string name="splited">Объединено</string>
    <string name="select_cancel">Для объединения выделите больше 1-й записи</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="enter_query_text">Введите искомый текст</string>
    <string name="no_matches_found">Совпадений не найдено</string>
    <string name="title_activity_settings">Настройки</string>

    <string name="order_type_date_asc">По дате (сначала новые)</string>
    <string name="order_type_date_desc">По дате (сначала старые)</string>
    <string name="order_type_title_asc">По заголовку (А-Я)</string>
    <string name="order_type_title_desc">По заголовку (Я-А)</string>
    <string-array name="orders_title">
        <item>Пользовательская</item>
        <item>По дате (сначала новые)</item>
        <item>По дате (сначала старые)</item>
    </string-array>
    <string-array name="orders_values">
        <item>0</item>
        <item>1</item>
    </string-array>
    <!-- Настройки -->
    <string-array name="pref_priority_titles">
        <item>PRIORITY_MAX</item>
        <item>PRIORITY_HIGH</item>
        <item>PRIORITY_DEFAULT</item>
        <item>PRIORITY_LOW</item>
        <item>PRIORITY_MIN</item>
    </string-array>
    <string-array name="pref_priority_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string name="selected_count">Выделено: %s</string>
    <string name="add_clip">Добавить</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value"/>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="accessibility_service_description">Описание моего сервиса</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="enter_title">Введите название</string>
    <string name="enter_content">Введите текст записи</string>
    <string name="current_clipboard_text">Текущая запись в буфере обмена:</string>

    <!-- Список категорий по умолчанию -->
    <string-array name="default_categories">
        <item>Основная категория</item>
        <item>Категория №2</item>
        <item>Категория №3</item>
        <item>Категория №4</item>
    </string-array>

</resources>
