<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_delete"
        android:orderInCategory="1"
        android:title="@string/action_delete"
        android:icon="@drawable/ic_delete"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_share"
        android:orderInCategory="3"
        android:title="@string/action_share"
        android:icon="@drawable/ic_share_white_24dp"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_split"
        android:orderInCategory="2"
        android:title="@string/action_split"
        android:icon="@drawable/ic_call_merge_white_24dp"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_change_category"
        android:orderInCategory="4"
        android:title="@string/action_change_category"/>
</menu>