<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="enable_service"
        android:summary="Включить мониторинг буфера обмена"
        android:title="Мониторинг"/>

    <SwitchPreference
        android:dependency="enable_service"
        android:defaultValue="false"
        android:key="display_notification"
        android:summary="Отображать уведомление в строке состояния"
        android:title="Уведомление"/>

    <ListPreference
        android:dependency="display_notification"
        android:defaultValue="1"
        android:entries="@array/pref_priority_titles"
        android:entryValues="@array/pref_priority_values"
        android:key="notification_priority"
        android:title="Приоритет уведомления"/>

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_display_name"
        android:inputType="textCapWords"
        android:key="example_text"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_display_name"/>

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="-1"
        android:entries="@array/pref_example_list_titles"
        android:entryValues="@array/pref_example_list_values"
        android:key="example_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_add_friends_to_messages"/>

    <PreferenceCategory android:title="Для разработчика">
        <SwitchPreference
            android:defaultValue="false"
            android:key="showMetaInAdapter"
            android:summary="Отображать метаданные"
            android:title="Метаданные"/>
    </PreferenceCategory>
</PreferenceScreen>
